manifests/deployment-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'microservicesakscluster-59af'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 'microservicesakscluster-59af'
  template:
    metadata:
      labels:
        app: 'microservicesakscluster-59af'
    spec:
      containers:
        - name: 'microservicesakscluster-59af'
          image: 'mircoservicecontainer.azurecr.io/payroll'
          ports:
            - containerPort: 80
