manifests/deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'microservicesakscluster-7cd9'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 'microservicesakscluster-7cd9'
  template:
    metadata:
      labels:
        app: 'microservicesakscluster-7cd9'
    spec:
      containers:
        - name: 'microservicesakscluster-7cd9'
          image: 'mircoservicecontainer.azurecr.io/payroll'
          ports:
            - containerPort: 80
