manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "microservicesakscluster-9db8"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "microservicesakscluster-9db8"
  template:
    metadata:
      labels:
        app: "microservicesakscluster-9db8"
    spec:
      containers:
        - name: "microservicesakscluster-9db8"
          image: "mircoservicecontainer.azurecr.io/microservicesakscluster"
          ports:
          - containerPort: 8080
