manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "microservicesakscluster-7cd9"
    labels:
        app: "microservicesakscluster-7cd9"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "microservicesakscluster-7cd9"
