manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "payrollaksdev-d1b8"
    labels:
        app: "payrollaksdev-d1b8"
spec:
    type: ClusterIP
    ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    selector:
        app: "payrollaksdev-d1b8"
